# kutl

./: .dockerignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: path-safety.yml  relay-image.yml
crates/kutl/: Cargo.toml
crates/kutl-bench/: Cargo.toml
crates/kutl-bench/benches/: crdt_compare.rs  sync_throughput.rs
crates/kutl-bench/src/: adapters.rs  lib.rs  workload.rs
crates/kutl-client/: Cargo.toml
crates/kutl-client/src/: connection.rs  credentials.rs  did_auth.rs  dirs.rs  git_detect.rs  identity.rs  kutlspace.rs  lib.rs  pid.rs  recovery.rs  space_config.rs  space_gitignore.rs  space_registry.rs  surface.rs  url.rs
crates/kutl-core/: Cargo.toml
crates/kutl-core/benches/: replace_content.rs
crates/kutl-core/src/: change.rs  document.rs  engine.rs  env.rs  error.rs  lib.rs
crates/kutl-core/src/lattice/: content_state.rs  doc_record.rs  eviction_state.rs  mod.rs  subscriber_map.rs
crates/kutl-daemon/: Cargo.toml
crates/kutl-daemon/src/: blob_state.rs  bridge.rs  case_collision.rs  client.rs  daemon.rs  documents.rs  inode.rs  lib.rs  metrics_calls.rs  metrics_server.rs  reconcile.rs  safe_path.rs  state.rs  telemetry.rs  watcher.rs
crates/kutl-daemon/tests/: integration.rs
crates/kutl-desktop/src/: index.html  main.js  preferences.html  styles.css
crates/kutl-desktop/src-tauri/: Cargo.toml  tauri.conf.json
crates/kutl-desktop/src-tauri/capabilities/: default.json
crates/kutl-desktop/src-tauri/icons/: icon.icns
crates/kutl-desktop/src-tauri/src/: commands.rs  daemon.rs  main.rs  notifications.rs  tray.rs
crates/kutl-proto/: Cargo.toml  build.rs
crates/kutl-proto/src/: lib.rs  protocol.rs
crates/kutl-relay/: Cargo.toml  Dockerfile
crates/kutl-relay/src/: acl.rs  auth.rs  authorized_keys.rs  blob_backend.rs  change_backend.rs  change_sqlite.rs  config.rs  conn.rs  content_backend.rs  flush.rs  instructions_template.md  invite_backend.rs  invite_routes.rs  lib.rs  load_class.rs  main.rs  mcp.rs  mcp_handler.rs  mcp_tools.rs  membership_backend.rs  observer.rs  pat_backend.rs  protocol.rs  quota_backend.rs  registry.rs  registry_store.rs  relay.rs  session_backend.rs  space_backend.rs  spaces.rs  sqlite_invite_backend.rs  telemetry.rs  text_export.rs  web.rs
crates/kutl-relay/tests/: authorized_keys.rs  desktop_invite_flow.rs  device_flow.rs  edited_at_coalescing.rs  invites.rs  mcp.rs  migration.rs  quota.rs  registry_integration.rs  registry_persistence_stress.rs  rename_convergence.rs  spaces.rs  storage.rs  sync.rs  text_export.rs  web_routes.rs  witness_classification.rs  witness_flush.rs
crates/kutl-relay/tests/common/: mod.rs
crates/kutl-sim/: Cargo.toml
crates/kutl-sim/src/: clock.rs  fuzz.rs  fuzz_util.rs  lib.rs  link.rs  network.rs  peer.rs  prng.rs  relay_fuzz.rs  relay_sim.rs  sim_env.rs  store.rs  trace.rs
crates/kutl-sim/tests/: adversity.rs  convergence.rs  crash_recovery.rs  fuzz.rs  relay_fuzz.rs  relay_scenarios.rs  relay_stress.rs  tracing.rs
crates/kutl-stress/: Cargo.toml
crates/kutl-stress/src/: client.rs  config.rs  main.rs  report.rs  scenario.rs
crates/kutl-sync-protocol/: Cargo.toml
crates/kutl-sync-protocol-wasm/: Cargo.toml
crates/kutl-sync-protocol-wasm/pkg/: kutl_sync_protocol.d.ts  kutl_sync_protocol.js  kutl_sync_protocol_bg.wasm  kutl_sync_protocol_bg.wasm.d.ts  package.json
crates/kutl-sync-protocol-wasm/src/: lib.rs
crates/kutl-sync-protocol/src/: lib.rs
crates/kutl/src/: agents_md.rs  agents_md_template.md  daemon_mgmt.rs  dirs.rs  identity.rs  main.rs  space.rs  supervisor.rs  watch.rs  watch_tools.rs
crates/kutl/src/status/: collect.rs  format.rs  mod.rs  probe.rs  schema.rs
crates/kutl/tests/: agents_md_init.rs  auth.rs  case_collision_init.rs  case_collision_join.rs  daemon.rs  log.rs  metrics.rs  status.rs  watch.rs
proto/kutl/sync/v1/: sync.proto
test-vectors/: slug-validation.json
