[package]
name = "kutl-core"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[package.metadata.dist]
dist = false

[dependencies]
diamond-types = "1.0.0"
jiff = { version = "0.2.24", default-features = false, features = ["std"] }
kutl-proto = { version = "0.1.0", path = "../kutl-proto" }
prost = "0.14.3"
similar = "2"
thiserror = "2.0.18"
tracing = "0.1.44"
uuid = { version = "1.22.0", features = ["v4"] }

[lints]
workspace = true

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
proptest = "1.10.0"
rand = "0.10"
tempfile = "3.25.0"

[[bench]]
name = "replace_content"
harness = false
