[package]
name = "kutl-proto"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[package.metadata.dist]
dist = false

[dependencies]
prost = "0.14.3"
serde = { version = "1", features = ["derive"] }

[lints]
workspace = true

[build-dependencies]
prost-build = "0.14.3"
protoc-bin-vendored = "3.2.0"
