[package]
name = "kutl-sim"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[package.metadata.dist]
dist = false

[dependencies]
kutl-core = { version = "0.1.0", path = "../kutl-core" }
kutl-relay = { version = "0.1.0", path = "../kutl-relay" }
kutl-proto = { version = "0.1.0", path = "../kutl-proto" }
pollster = "0.4.0"
prost = "0.14.3"
rand = "0.10.0"
rand_chacha = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["sync"] }
uuid = { version = "1.22.0", features = ["v4"] }

[features]
## Enable intensive stress tests (run with `cargo test -p kutl-sim --features stress`).
stress = []

[lints]
workspace = true
