[package]
name = "kutl-stress"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[package.metadata.dist]
dist = false

[dependencies]
anyhow = "1.0.102"
kutl-client = { version = "0.1.0", path = "../kutl-client" }
kutl-core = { version = "0.1.0", path = "../kutl-core" }
kutl-relay = { version = "0.1.0", path = "../kutl-relay" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"

[lints]
workspace = true
