[package]
name = "kutl-desktop"
version = "0.1.0"
edition = "2024"
description = "kutl desktop application"
license = "MIT OR Apache-2.0"

[package.metadata.dist]
dist = false

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
dirs = "6.0.0"
ed25519-dalek = "2.2.0"
kutl-client = { version = "0.1.0", path = "../../kutl-client" }
kutl-core = { version = "0.1.0", path = "../../kutl-core" }
kutl-daemon = { version = "0.1.0", path = "../../kutl-daemon" }
kutl-relay = { version = "0.1.0", path = "../../kutl-relay" }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-deep-link = "2.4.7"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-notification = "2.3.3"
tauri-plugin-shell = "2.3.5"
tauri-plugin-single-instance = "2.4.0"
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
url = "2.5.8"

# kutl-desktop is intentionally outside the cargo workspace (see the
# workspace Cargo.toml); inline the lints config that the workspace
# would otherwise provide.
[lints.clippy]
pedantic = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
